Bug 84694 - Select the whole sheet when a picture was prior selected, then copy or cut, only the prior selected picture was copied/cut, not the whole sheet.
Summary: Select the whole sheet when a picture was prior selected, then copy or cut, o...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: x86-64 (AMD64) Windows (All)
: medium normal
Assignee: Andreas Heinisch
URL:
Whiteboard: target:27.2.0
Keywords:
Depends on:
Blocks: Calc-Images Cut-Copy Sheet
  Show dependency treegraph
 
Reported: 2014-10-05 19:55 UTC by Yoswin Prajuabmoh
Modified: 2026-07-15 14:50 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
The whole sheet was selected, and the prior selected object is still active. (325.74 KB, image/jpeg)
2014-10-05 19:55 UTC, Yoswin Prajuabmoh
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Yoswin Prajuabmoh 2014-10-05 19:55:12 UTC
Created attachment 107377 [details]
The whole sheet was selected, and the prior selected object is still active.

When I select a single picture attached to a sheet from picture file, and then select the whole sheet by clicking the top left header, then do a copy or cut operation, the whole sheet should be copied/cut, but in fact not. Only the prior selected picture was copied/cut, not the whole sheet. When I paste the copied object(s) into another sheet, only prior selected picture was pasted.
Comment 1 Tim Lloyd 2014-10-10 02:22:56 UTC
Hi,

your attachment is unreadable :(

I can recreate this under Fedora 21 LO4.3.2.2 also XP LO4.2.04

Just to ensure we are on the same page:

create a new speadsheet
1. in cell L24 Insert->Image->from file
2. in other random cells insert text
3. click on L24
4. click on top left header - the whole document is highlighted
5. click CTRL-X
6. cell L24 is cut but the rest of the document is untouched

Is the function of the top left header to SELECT ALL or highlight all?
Comment 2 Tim Lloyd 2014-10-12 05:41:15 UTC
as per my last post, setting status to NEW
Comment 3 tommy27 2016-04-16 07:25:32 UTC Comment hidden (obsolete)
Comment 4 Xavier Van Wijmeersch 2017-07-09 13:36:28 UTC
confirmed for the steps in comment1

but when not select the image in step3, the text and the image is copying and can be past as a whole in another sheet (only steps 1.2,4,5,6)

Version: 6.0.0.0.alpha0+
Build ID: 6549993b17feb1423c76b5237f086e6f35346a2c
CPU threads: 8; OS: Linux 4.9; UI render: default; VCL: kde4; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2017-07-06_07:37:37
Locale: nl-BE (en_US.UTF-8); Calc: group
Comment 5 QA Administrators 2018-07-10 02:37:01 UTC Comment hidden (obsolete)
Comment 6 Yoswin Prajuabmoh 2018-07-24 10:48:07 UTC
I downloaded, installed and tested LibreOffice (current latest version, 6.0.5 x86-64) today to see if this bug I reported on 2014-10-05 (with version 4.1.3.2 x86-64) is currently fixed or not. I found this bug is still present.

Explanation:- After I selected a single graphic object, I tried select the whole sheet A) by clicking the top left header, then do cut/copy (tried both cut and copy, cutting resulted in only the prior selected graphic object was cut out), pasting the copied into another sheet, only prior selected graphic object was pasted. B) using main menu (Edit > Select All) and C) using shortcut key sequence (in this case Ctrl-Shift-Space), at this step, only all graphic objects in sheet were selected altogether, every things else were not; then do cut/copy (tried both cut and copy, cutting resulted in all the graphic objects in sheet were cut out, but every things else remain), pasting the copied into another sheet, only all graphic objects from selection were copied, each in exact positions.
Comment 7 QA Administrators 2019-07-30 03:12:39 UTC Comment hidden (obsolete)
Comment 8 QA Administrators 2021-07-30 06:22:48 UTC Comment hidden (obsolete)
Comment 9 QA Administrators 2023-07-31 03:05:37 UTC Comment hidden (obsolete)
Comment 10 Kira Tubo 2023-09-17 08:57:17 UTC
 
> create a new speadsheet
> 1. in cell L24 Insert->Image->from file
> 2. in other random cells insert text
> 3. click on L24
> 4. click on top left header - the whole document is highlighted
> 5. click CTRL-X
> 6. cell L24 is cut but the rest of the document is untouched

Just to clarify: Reproduced above except for following changes:
- Step 3: click on image inserted from Step 1 (not the cell)
- Step 6: Image is cut (not the cell) and the rest of document untouched

It seems that if the image is selected initially, before the whole document is highlighted in step 4, only the image will be cut/pasted. 

In addition, this looks to be reproducible in v.3.3, so updating earliest bug to Inherited from OOo. 

Also reproducible in daily master build:

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 36163d269bd8f77a86605e4c5ff5adce17b4c66c
CPU threads: 6; OS: Windows 10.0 Build 22621; UI render: Skia/Raster; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL threaded
Comment 11 QA Administrators 2025-09-17 03:09:52 UTC Comment hidden (obsolete)
Comment 12 Commit Notification 2026-07-08 21:00:23 UTC
Andreas Heinisch committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/fa81448cf1bf59c903ec499376f65ba2374955ba

tdf#84694 - Deselect draw objects before selecting the entire sheet

It will be available in 27.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.