tdf#84694 - Deselect draw objects before selecting the entire sheet

Otherwise, cutting/copying the entire sheet operates only on the
selected draw object rather than on the entire sheet.

Change-Id: Ie7b1a1c4fb54743c32bd130a9e308f0b6f68fc43
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/207745
Tested-by: Jenkins
Reviewed-by: Andreas Heinisch <andreas.heinisch@yahoo.de>